<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/plusminus_button"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="590dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="91dp"
        android:text="@string/plus_minus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/zero_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/zero_button"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="91dp"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/decimal_button"
        app:layout_constraintStart_toEndOf="@+id/plusminus_button" />


    <Button
        android:id="@+id/decimal_button"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="91dp"
        android:text="@string/decimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/equal_button"
        app:layout_constraintStart_toEndOf="@+id/zero_button" />

    <Button
        android:id="@+id/equal_button"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="590dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="91dp"
        android:text="@string/equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/decimal_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/plus_button"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginTop="510dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="30dp"
        android:text="@string/plus"
        app:layout_constraintBottom_toTopOf="@+id/equal_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/three_button"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginTop="510dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/three"
        app:layout_constraintBottom_toTopOf="@+id/decimal_button"
        app:layout_constraintEnd_toStartOf="@+id/plus_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/two_button"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="510dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/two"
        app:layout_constraintBottom_toTopOf="@+id/zero_button"
        app:layout_constraintEnd_toStartOf="@+id/three_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/one_button"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="510dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/one"
        app:layout_constraintBottom_toTopOf="@+id/plusminus_button"
        app:layout_constraintEnd_toStartOf="@+id/two_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/minus_button"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginTop="430dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="30dp"
        android:text="@string/minus"
        app:layout_constraintBottom_toTopOf="@+id/plus_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/multiply_button"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="30dp"
        android:text="@string/multiply"
        app:layout_constraintBottom_toTopOf="@+id/minus_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/division_button"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="30dp"
        android:text="@string/divide"
        app:layout_constraintBottom_toTopOf="@+id/multiply_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/six_button"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginTop="430dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/six"
        app:layout_constraintBottom_toTopOf="@+id/three_button"
        app:layout_constraintEnd_toStartOf="@+id/minus_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nine_button"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/nine"
        app:layout_constraintBottom_toTopOf="@+id/six_button"
        app:layout_constraintEnd_toStartOf="@+id/multiply_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/percent_button"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/percent"
        app:layout_constraintBottom_toTopOf="@+id/nine_button"
        app:layout_constraintEnd_toStartOf="@+id/division_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/five_button"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginTop="430dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/five"
        app:layout_constraintBottom_toTopOf="@+id/two_button"
        app:layout_constraintEnd_toStartOf="@+id/six_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/four_button"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="430dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/four"
        app:layout_constraintBottom_toTopOf="@+id/one_button"
        app:layout_constraintEnd_toStartOf="@+id/five_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/eight_button"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/eight"
        app:layout_constraintBottom_toTopOf="@+id/five_button"
        app:layout_constraintEnd_toStartOf="@+id/nine_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/seven_button"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/seven"
        app:layout_constraintBottom_toTopOf="@+id/four_button"
        app:layout_constraintEnd_toStartOf="@+id/eight_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/parenthesis_button"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/parenthesis"
        app:layout_constraintBottom_toTopOf="@+id/eight_button"
        app:layout_constraintEnd_toStartOf="@+id/percent_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/clear"
        app:layout_constraintBottom_toTopOf="@+id/seven_button"
        app:layout_constraintEnd_toStartOf="@+id/parenthesis_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="210dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>